# LLM-Cost-Comparison

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  SKILL.md  example-config.env  experiment-runner.ps1  models.json  pyproject.toml
.github/workflows/: ci.yml
catalogs/: appraise_slots.yaml  experiments.yaml  methods.yaml  models.yaml  pricing_sources.yaml  samples.yaml  tasks.yaml  tiers.yaml
data/: experiment-s5-all-summary.csv  experiment-s5-expansion-raw.csv  experiment-s5-expansion-summary.csv  experiment-s5-max-variants-raw.csv  experiment-session5-consolidated.csv  experiment-session5-raw.csv  experiment-session5-summary.csv  model-manifest-2026-07-12.csv  openrouter-generations-2026-07-08.csv  speed-benchmark-gapfill.csv  speed-benchmark-remaining.csv  speed-benchmark-results.csv  tokenizer-efficiency-raw.csv
data/appraise/: README.md
data/output-experiment/: session6-expansion-raw.csv  session6-merged.csv  session6-output-verbosity.csv  session6-per-task-summary.csv  session6b-compression-costs.csv  session6b-compression-summary.csv  session6b-compression.csv  session6b-expansion-raw.csv  session6b-expansion-summary.csv  session6b-gapfill-raw.csv  session6b-rerun-cheap.csv
data/samples/: blended-sample.txt  code-sample.txt  prose-sample.txt
data/speed-timeseries/: README.md  speed-timeseries-2026-07-16.csv
docs/: tokenizer-efficiency-experiment.md  tokenizer-efficiency-methodology.md
scripts/: analyze-s6b.py  appraise-model.ps1  close-gaps-exp3-exp4.ps1  close-gaps-s6b-rerun.py  commit-data.sh  compression-method-test.ps1  enrich-costs.ps1  final-s6-batch.ps1  fix-gpt5-nano.ps1  gen-full-summary.ps1  merge-s5-summaries.ps1  merge-s6.ps1  merge-s6b-clean.py  resume-s6-expansion.ps1  run-compression-experiment.ps1  run-max-test.ps1  run-output-experiment.ps1  run-s5-expansion.ps1  run-s6-expansion.ps1  run-s6b-expansion.ps1  speed-timeseries.ps1  update-models-from-session5.ps1  update-models-json-te.ps1  update-models-output-verbosity.ps1  validate-data.py
src/llm_cost_comparison/: __init__.py
src/llm_cost_comparison/calculations/: __init__.py  compression.py  cost.py  efficiency.py
src/llm_cost_comparison/cli/: __init__.py  main.py
src/llm_cost_comparison/clients/: __init__.py  base.py  openrouter.py  pricing.py
src/llm_cost_comparison/core/: __init__.py  catalog.py  config.py  exceptions.py  models.py
src/llm_cost_comparison/experiments/: __init__.py  appraisal.py  base.py  compression.py  output_verbosity.py  speed.py  tokenizer.py  utils.py
src/llm_cost_comparison/exporters/: __init__.py  csv.py  json.py
src/llm_cost_comparison/storage/: __init__.py  models.py  repository.py  session.py
src/llm_cost_comparison/validation/: __init__.py  legacy.py  validators.py
tests/: conftest.py
tests/unit/: test_catalog.py  test_cli.py  test_compression.py  test_config.py  test_cost.py  test_efficiency.py  test_experiments.py  test_json_exporter.py  test_openrouter_client.py  test_pricing.py  test_storage.py  test_validation.py  test_version.py
